# Embodied-Agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bhavya_transfer_test.sh  config.yaml  dev-requirements.txt  docker-compose.yml  environment.yml  error.xml  evo-aaron-run.sh  evo-run.sh  last copy.xml  last.xml  mj-aaron-run.sh  mj-ktiwary-run.sh  profile_results2.prof  pyproject.toml  python  requirements.txt  run1.sh  run2.sh  run3.sh  run8.sh  run9.sh  run_changing_width.sh  run_changing_width_2eyes.sh  setup.py  submit_evo.sh  todo.txt
.github/workflows/: gh_pages.yml
cambrian/: README.md  __init__.py  agent_run.py  animal.py  config.py  env.py  eye.py  language_models.py  main.py  maze.py  optics.py  population.py  renderer.py
cambrian/agents/: __init__.py  agent.py  object.py  point.py
cambrian/animals/: __init__.py  animal.py  point.py
cambrian/configs/: base.yaml
cambrian/envs/: __init__.py  done_fns.py  env.py  env_rllib.py  maze_env.py  object_env.py  prune_fns.py  reward_fns.py  step_fns.py  termination_fns.py  truncation_fns.py
cambrian/evolution_envs/: animal.py  animal_eye.py  eye.py  eyeV2.py
cambrian/eyes/: __init__.py  approx_multi_eye.py  eye.py  multi_eye.py  multi_eye_approx.py  optics.py  tof_eye.py
cambrian/ml/: __init__.py  callbacks.py  constraint_fns.py  evo.py  feature_extractors.py  features_extractors.py  fitness_fns.py  model.py  optical_feature_extractor.py  trainer.py
cambrian/models/: scene.xml  settings.xml
cambrian/reinforce/: basic_evo.py  basic_evo_pixels.py  env_v1.py  env_v2.py  models.py  mutation.py
cambrian/renderer/: __init__.py  maze.py  optics.py  overlays.py  ray.py  render_utils.py  renderer.py  tunnel.py  wall.py
cambrian/rl/: evo.py  trainer.py
cambrian/utils/: __init__.py  base_config.py  cambrian_xml.py  config copy 2.py  config copy 3.py  config copy.py  config-old.py  config.py  constants.py  spec.py  (+10 more)
configs/: .yamllint.yaml  2compound_eyes_changin_width.yaml  2compound_eyes_v1.yaml  base.yaml  debug.yaml  ten_compound_eyes_v1.yaml  ten_compound_eyes_v1_maze2.yaml  ten_compound_eyes_v1_scratch.yaml  ten_compound_eyes_v2_30deg.yaml  v1.yaml  v2.yaml
configs_evo/: debug.yaml  debug_distributed.yaml  debug_distributed_v2.yaml
configs_forward/: 10_compound_eyes_forward.yaml  simple_eyes_forward.yaml  two_compound_eyes.yaml
configs_freq_maze/: 10_compound_eyes_1024_nsteps_curvy_v1.yaml  10_compound_eyes_1024_nsteps_curvy_v2.yaml  10_compound_eyes_2048_nsteps_curvy_v1.yaml  10_compound_eyes_rt_changing_width.yaml  simple_eyes_1024_nsteps_curvy_v1_obs10.yaml  simple_eyes_rt_changing_width.yaml  two_compound_eyes_1024_nsteps_curvy_v1.yaml  two_compound_eyes_rt_changing_width.yaml
configs_mujoco/: 3lat4lon_midres_eyes.yaml  ant_1lat4lon_2x2.yaml  ant_1lat4lon_4x4.yaml  ant_maze.yaml  base.yaml  baseline.yaml  dev.yaml  energy_base.yaml  maze.yaml  point_1lat1lon_1x1.yaml  point_1lat1lon_1x1_hard.yaml  point_1lat1lon_2x2.yaml  point_1lat2lon_2x2.yaml  point_1lat2lon_4x4.yaml  point_1lat2lon_4x4_hard.yaml  point_1lat3lon_20x20.yaml  point_1lat4lon_2x2.yaml  point_1lat4lon_4x4_hard.yaml  point_1lat5lon_1x1.yaml  point_1x1_intensity_only.yaml  point_2lat5lon_1x1.yaml  point_3lat4lon_1x1.yaml  psf_base.yaml  swimmer_maze.yaml  two_lowres_eyes.yaml
configs_v2/: simple_eyes_1024_nsteps_rt_changing_width.yaml  ten_compound_eyes_1024_nsteps_rt_changing_width.yaml  ten_compound_eyes_1024_nsteps_rt_constant_width.yaml  ten_compound_eyes_rt_4096_rt_changing_width.yaml  ten_compound_eyes_rt_4096_rt_constant_width.yaml  ten_compound_eyes_rt_changing_width.yaml  ten_compound_eyes_rt_changing_width_bigger_nsteps.yaml
configs_v3/: 10_compound_eyes_1024_nsteps_curvy_v1.yaml  10_compound_eyes_1024_nsteps_curvy_v2.yaml  simple_eyes_1024_nsteps_changing_width.yaml  simple_eyes_1024_nsteps_curvy_v1.yaml  simple_eyes_1024_nsteps_curvy_v2.yaml  simple_eyes_1024_nsteps_rt_changing_width.yaml
docker/: aci.dockerfile  cambrian.dockerfile
docs/: .gitignore  conf.py  contributing.md  index.md  requirements.txt  setup.md
models/: ant.xml  blocks.xml  maze.xml  point.xml  scene.xml  settings.xml  swimmer.xml  test.xml
scripts/: dr_all.sh  euler.sh  euler_test.sh  eval.sh  evo.sh  install_mj.sh  local.sh  openmind.sh  python.sh  run.sh  sc.sh  supercloud_test.sh  test.sh  train.sh
scripts_aaron/: dr_all.sh  dr_highres_feweyes.sh  dr_highres_manyeyes.sh  dr_lowres_feweyes.sh  dr_lowres_manyeyes.sh  dr_random_highres_feweyes.sh  dr_random_highres_manyeyes.sh  dr_random_lowres_feweyes.sh  dr_random_lowres_manyeyes.sh  eval.sh  run.sh  sc.sh  simplification.sh  simplification_overfit.sh  train.sh
tools/: bee_sim.py  bee_sim_v1.py  config_generator.py  convert_xml_to_yaml.py  debug.ipynb  eval.py  height_map_generator.py  maze_creator.py  overlay_evaluation.py  parse_evos.py  parse_nevergrad.py  plot.py  texture_generator.py  visualize_dataset.py  visualize_policy.py
(+846 files in other folders)
